Cambio aside fixed in overflow

--- a/css/style.css
+++ b/css/style.css
@@ -59,16 +59,18 @@ button{
 
 main{
     height: calc(100vh - 80px);
+    display: flex;
 }
 
 /* 
             ASIDE
 */
 
+aside{
+    overflow: hidden;
+}
+
 .my-aside{
-    position: fixed;
-    top: 80px;
-    left: 0;
     width: 70px;
     height: calc(100vh - 80px);
     background-color: var(--blue);
@@ -102,14 +104,14 @@ main{
 
 .main-section{
     width: calc(100% - 70px);
-    float: right;
+    overflow-y: auto;
+    height: calc(100vh - 80px);
 
 }
 
 /* 
     UPPER SECTION
 */
-
 
 .my-upper-main{
     background-color: #1B72E8;
@@ -133,6 +135,7 @@ main{
 */
 
 .card{
+    width: 100%;
     max-height: 500px;
 }
 
